syntax = "proto3";

package proto;
option go_package = "./;proto";

import "ChatInfo.proto";

message PlayerChatNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 3295;
  }

  uint32 channel_id = 14;
  ChatInfo chat_info = 12;
}
