syntax = "proto3";

package proto;
option go_package = "./;proto";


message PlayerChatRsp {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 3321;
  }

  int32 retcode = 4;
  uint32 chat_forbidden_endtime = 15;
}
