syntax = "proto3";

package proto;
option go_package = "./;proto";

import "ChatInfo.proto";

message PrivateChatNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 5039;
  }

  ChatInfo chat_info = 1;
}
