syntax = "proto3";

package proto;
option go_package = "./;proto";


message PrivateChatReq {
  uint32 target_uid = 2;
  oneof content {
    string text = 8;
    uint32 icon = 6;
  }
}
